changes in login and registration
